syntax = "proto3";

package user;

option go_package = "social-media-service/proto/userpb";

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  uint32 id = 1;
}

message UserResponse {
  uint32 id = 1;
  string username = 2;
  string email = 3;
}
